--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -117,3 +117,12 @@ br + .labelLine {
 .form-date .form-label-bold {
   font-weight: normal;
 }
+
+.form-date .error {
+  border-left: none;
+  padding-left: 0;
+}
+
+.form-date .error-message {
+  display: none;
+}
