Set form-group-class

--- a/app/components/Date/Date.njk
+++ b/app/components/Date/Date.njk
@@ -8,9 +8,9 @@
   <div id="{{ prefixedName }}" class="form-group{% if error %} error{% endif %}"{% if name %} data-block-name="{{name}}"{% endif %}>
   {% call Fieldset(name) %}
     <div class="form-date">
-      {{ Input(name+'.day', type='number', label='Day', pattern='[0-9]*', min=0, max=31) }}
-      {{ Input(name+'.month', type='number', label='Month', pattern='[0-9]*', min=0, max=12) }}
-      {{ Input(name+'.year', type='number', label='Year', pattern='[0-9]*') }}
+      {{ Input(name, suffix='day', type='number', label='Day', pattern='[0-9]*', min=0, max=31, placeholder='dd') }}
+      {{ Input(name, suffix='month', type='number', label='Month', pattern='[0-9]*', min=0, max=12, placeholder='mm') }}
+      {{ Input(name, suffix='year', type='number', label='Year', pattern='[0-9]*', placeholder='yyyy') }}
     </div>
   {% endcall %}
   </div>
