--- a/app/components/FormGroup/FormGroup.njk
+++ b/app/components/FormGroup/FormGroup.njk
@@ -1,12 +1,12 @@
 {% from '../DependsHidden/DependsHidden.njk' import DependsHidden with context %}
 {% from '../DependsAria/DependsAria.njk' import DependsAria with context %}
-{% macro FormGroup(name, error='', depends=false, open=false) -%}
+{% macro FormGroup(name, suffix='', error='', depends=false, open=false) -%}
 {% set prefixedName = name %}
 {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
 {% if not error %}
 {% set error = getFormattedError(prefixedName, { error: error }) %}
 {% endif %}
-  <div class="form-group{% if error %} error{% endif %}{{ DependsHidden(depends=depends, open=open) }}"{{ DependsAria(name, depends=depends, open=open) }}{% if name %} data-block-name="{{name}}"{% endif %}>
+  <div class="form-group form-group-{% if suffix %}{{ suffix }}{% else %}{{ name }}{% endif %}{% if error %} error{% endif %}{{ DependsHidden(depends=depends, open=open) }}"{{ DependsAria(name, depends=depends, open=open) }}{% if name %} data-block-name="{{name}}"{% endif %}>
   {% if caller %}
   {{ caller() }}
   {% endif %}
