--- a/app/components/Input/Input.njk
+++ b/app/components/Input/Input.njk
@@ -1,13 +1,14 @@
 {% from '../FormGroup/FormGroup.njk' import FormGroup with context %}
 {% from '../ControlLabel/ControlLabel.njk' import ControlLabel with context %}
-{% macro Input(name, type='text', value='', label='', multiline=false, cols=80, rows=5, placeholder='', pattern='', min='', max='', controlError='') -%}
+{% macro Input(name, suffix='', type='text', value='', label='', multiline=false, cols=80, rows=5, placeholder='', pattern='', min='', max='', controlError='') -%}
+  {% if suffix %}{% set name = name + '.' + suffix %}{% endif %}
   {% set prefixedName = name %}
   {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
   {% set controlErrorCheck = '' + controlError %}
   {% if not controlErrorCheck %}
     {% set controlError = getError(prefixedName) %}
   {% endif %}
-  {% call FormGroup(name, error=error) -%}
+  {% call FormGroup(name, suffix=suffix, error=error) -%}
     {{ ControlLabel(name, label=label, sublabel=sublabel, hint=hint, error=error) }}
     {% if prefixedName and not value %}
     {% if getValue %}
