--- a/app/components/ControlLabel/ControlLabel.njk
+++ b/app/components/ControlLabel/ControlLabel.njk
@@ -1,9 +1,9 @@
 {% from '../ControlError/ControlError.njk' import ControlError with context %}
 {% macro ControlLabel(name, label='', sublabel='', hint='', optional='', error='') -%}
-{% set label = getFormattedProp(name, 'label', name, { value: label }) %}
-{% set sublabel = getFormattedProp(name, 'sublabel', { value: sublabel }) %}
+{% set label = getFormattedBodyContent(name, 'label', name, { value: label }) %}
+{% set sublabel = getFormattedBodyContent(name, 'sublabel', { value: sublabel }) %}
 {% set optional = getBlockProp(name, 'optional', { value: optional }) %}
-{% set hint = getFormattedProp(name, 'hint', { value: hint }) %}
+{% set hint = getFormattedBodyContent(name, 'hint', { value: hint }) %}
 {% set labelExtra = getFormattedBody(name, 'label_extra') %}
 {% set hintExtra = getFormattedBody(name, 'hint_extra') %}
   <label xclass="form-label-bold" for="{{ name }}">
