--- a/app/components/Fieldset/Fieldset.njk
+++ b/app/components/Fieldset/Fieldset.njk
@@ -1,9 +1,9 @@
 {% from '../ControlError/ControlError.njk' import ControlError with context %}
 {% from '../Group/Group.njk' import Group with context %}
 {% macro Fieldset(name, content='', label='', sublabel='', hint='', inline='', blocks='', group='', visually_hidden=false, error='') %}
-{% set label = getFormattedProp(name, 'label', { value: label }) %}
-{% set sublabel = getFormattedProp(name, 'sublabel', { value: sublabel }) %}
-{% set hint = getBlockProp(name, 'hint', { value: hint }) %}
+{% set label = getFormattedBodyContent(name, 'label', { value: label }) %}
+{% set sublabel = getFormattedBodyContent(name, 'sublabel', { value: sublabel }) %}
+{% set hint = getFormattedBodyContent(name, 'hint', { value: hint }) %}
 {% set inline = getBlockProp(name, 'inline', { value: inline }) %}
 {% if not blocks and getBlockProp(name, 'blocks') %}
 {% set blocks = getBlockProp(name, 'blocks') %}
