Enable offline operation

--- a/app/templates/app-base/app-base.html
+++ b/app/templates/app-base/app-base.html
@@ -103,7 +103,7 @@
 {# TODO: ensure that req.disqualified does what it should do #}
 {# TODO: normalize env, ENV, req.env, req.ENV #}
 {% if not req.disqualified %}
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
+  {# <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script> #}
   <script src="/public/javascripts/vendor/js-cookie/js-cookie_v2.1.3.js"></script>
   <script>
   if (Cookies.get('seen_cookie_message')) {
