Allow fieldset legends to be visuallyhidden

--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -8,6 +8,9 @@
 {% set inline = getBlockProp(name, 'inline', { value: inline }) %}
 {% set label = getBlockProp(name, 'label', { value: label }) %}
 {% set options = getBlockProp(name, 'options', { value: options }) %}
+{% if not visually_hidden %}
+{% set visually_hidden = getBlockProp(name, 'visuallyhidden') %}
+{% endif %}
 <div class="form-group{% if error %} error{% endif %}"{% if name %} data-block-name="{{name}}"{% endif %}>
 {% call Fieldset(name, label=label, inline=inline, visually_hidden=visually_hidden) %}
   {#% set or = getBlockProp(name, 'or') %#}
