--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -118,4 +118,5 @@
   <script src="{{ asset_path }}javascripts/toolkit.min.js?0.0.1"></script>
   <script src="{{ asset_path }}javascripts/components.min.js?0.0.1"></script>
 <!--<![endif]-->
+  <script src="{{ asset_path }}javascripts/data-excludes/data-excludes.js"></script>
 {% endblock %}
