--- a/app/templates/form/form.html
+++ b/app/templates/form/form.html
@@ -59,7 +59,7 @@ jQuery('[data-excludes] input').on('change', function(){
     unsetCheckbox(inputs)
   }
 })
-jQuery('input[type=radio][aria-controls]').each(function(){
+jQuery('input[aria-controls]').each(function(){
 //on('change', function() {
   var $this = jQuery(this)
   var name = $this.attr('name')
@@ -67,14 +67,12 @@ jQuery('input[type=radio][aria-controls]').each(function(){
   var revealsId = this.id
   var $controls = jQuery('#' + controls)
   jQuery('input[name="' + name + '"]').on('change', function(){
-    var state = this.id === revealsId
+    var state = this.type === 'checkbox' ? this.checked : this.id === revealsId
     var classMethod = state ? 'removeClass' : 'addClass'
     var ariaHidden = state ? 'false' : 'true'
     $controls[classMethod]('js-hidden')
     $controls.attr('aria-hidden', ariaHidden)
-    console.log(controls, state)
   })
-  //console.log($this.attr('aria-controls'), $this.attr('name'))
 })
 </script>
 {% endblock %}
