--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -27,6 +27,7 @@
   "components/OptionLabel/OptionLabel.njk",
   "components/PageHeader/PageHeader.njk",
   "components/Password/Password.njk",
+  "components/ProgressiveDisclosure/ProgressiveDisclosure.njk",
   "components/RadioGroup/RadioGroup.njk",
   "components/Raw/Raw.njk",
   "components/Reveal/Reveal.njk",
