--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -107,6 +107,15 @@ br + .labelLine {
   }
 }
 
+@media (--govuk-medium) {
+  .fieldset-block .multiple-choice {
+    float: none;
+    display: table;
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+}
+
 .form-group {
   & input[type=text],
   & textarea {
