--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -509,10 +509,7 @@ hierarchy:<br>{{ stepRoute.hierarchy.join('<br>') | safe }}
 {{ route.flowchartOutput[stepId] | safe }}
 {% else %}
 {# update per-route id and vars #}
-{% set newStep = {'app:routeId': step} %}
-{% set updatedFormatSink = updateFormat(newStep) %}
-{% set stepBlockVars = getBlockVars(step) %}
-{% set updatedFormatSink = updateFormat(stepBlockVars) %}
+{% set updateRouteFormatSink = updateRouteFormat(step) %}
 
 {{ Block.PageHeader(stepId, start_page=stepRoute.start_page) }}
 {{ Block.Body(stepId) }}
