--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -68,15 +68,11 @@ sup {
   font-size: 75%;
 }
 
-label br {
-  display: none;
-}
-
 .labelLine {
   display: block;
 }
 
-br + .labelLine {
+.labelLine + .labelLine {
   margin-top: 1.25rem;
 }
 
